# hpc-aa

./: .gitignore  README.md
Ex02/Homework/: Makefile  cuda_mmult.cu  cuda_mmult_kernels.cu  cuda_mmult_kernels.h
Ex03/: CMakeLists.txt  Makefile  gnuplot_i.c  gnuplot_i.h  kernels.cu  main.c  pagerank.c  poisson.c
